<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:visibility="visible"
    tools:context="com.team13.trojancheckin_out.Layouts.StudentLanding">


    <View
        android:id="@+id/topRed"
        android:layout_width="435dp"
        android:layout_height="164dp"
        android:background="#990000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/infoView"
        android:layout_width="382dp"
        android:layout_height="240dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/round_rectangle"
        app:cornerRadius="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="trojan"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="check in/out"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_mname_is_jeff"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:scaleType="centerCrop"
        app:backgroundTint="#00FFCC00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="62dp"
        app:srcCompat="@drawable/ic_outline_account_circle_24"
        app:tint="@null" />

    <TextView
        android:id="@+id/Actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Actions"
        android:textColor="#707070"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoView" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="389dp"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0.02"
        android:stateListAnimator="@null"
        android:text="@string/sign_out"
        android:textSize="13sp"
        app:backgroundTint="@color/red"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="70dp"
        android:background="#FFCC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkOut"
        android:layout_width="175dp"
        android:layout_height="185dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        app:backgroundTint="#ffffff"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Actions" />

    <Button
        android:id="@+id/checkOut2"
        android:layout_width="371dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0"
        android:text="Visit History"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:backgroundTint="#ffffff"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scan" />

    <Button
        android:id="@+id/Scan"
        android:layout_width="175dp"
        android:layout_height="185dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        app:backgroundTint="#ffffff"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Actions" />

    <ImageView
        android:id="@+id/checkOutIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_qr"
        android:elevation="2dp"
        android:scaleX=".6"
        android:scaleY=".6"
        app:layout_constraintEnd_toEndOf="@+id/checkOut"
        app:layout_constraintStart_toStartOf="@+id/checkOut"
        app:layout_constraintTop_toTopOf="@+id/checkOut"
        app:srcCompat="@drawable/ic_outline_exit_to_app_24" />

    <ImageView
        android:id="@+id/checkoutImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_qr"
        android:elevation="2dp"
        android:scaleX=".6"
        android:scaleY=".6"
        app:layout_constraintEnd_toEndOf="@+id/Scan"
        app:layout_constraintStart_toStartOf="@+id/Scan"
        app:layout_constraintTop_toTopOf="@+id/Scan"
        app:srcCompat="@drawable/ic_baseline_qr_code_24" />

    <TextView
        android:id="@+id/id2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="Kickin Ass and Taking Names"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

    <View
        android:id="@+id/viewDivider1"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="50dp"
        android:background="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoView" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="70dp"
        android:background="#4d000000"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Name"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider1"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toTopOf="@+id/infoView"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/majorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="Major"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

    <TextView
        android:id="@+id/buildingName"
        android:layout_width="291dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:text="N/A"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

    <TextView
        android:id="@+id/scanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="@font/montserrat"
        android:text="Scan"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Scan"
        app:layout_constraintStart_toStartOf="@+id/Scan"
        app:layout_constraintTop_toBottomOf="@+id/checkoutImage" />

    <TextView
        android:id="@+id/checkoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="@font/montserrat"
        android:text="Check Out"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/checkOut"
        app:layout_constraintStart_toStartOf="@+id/checkOut"
        app:layout_constraintTop_toBottomOf="@+id/checkOutIcon" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="Mname Is Jeff"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider1"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintTop_toTopOf="@+id/infoView"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/id"
        android:layout_width="91dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="1234567890"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider2"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider1" />

    <View
        android:id="@+id/viewDivider2"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="50dp"
        android:background="#4D000000"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@id/viewDivider1" />

    <TextView
        android:id="@+id/idTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="ID"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/viewDivider2"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />


</androidx.constraintlayout.widget.ConstraintLayout>