<resources>
    <string name="app_name">Trojan Check In/Out</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="welcome_mname_is_jeff">welcome Mname Is Jeff</string>
    <string name="title_activity_search_student">SearchStudent</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="emailtitle">E-Mail Error!</string>
    <string name="emailmsg">Please ensure that you email is valid and under the USC organization (@usc.edu).</string>
...
